--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
 "bsp": {
    //"board": "stm32f4_disco",
    //"board": "nucleo_n657x0_q",
-   "board": "stm32h735g_disco",
+   //"board": "stm32h735g_disco",
+   "board": "stm32f746g_disco",
    //"board": "qmu_cortex_m3",
  },
  "app": {
