--- a/prj.conf
+++ b/prj.conf
@@ -14,18 +14,14 @@ CONFIG_GPIO_ENABLE_DISABLE_INTERRUPT=y
 #Verify that userspace builds work.
 #CONFIG_USERSPACE=y
 
-CONFIG_UART_INTERRUPT_DRIVEN=y
-CONFIG_UART_LINE_CTRL=n
+#CONFIG_UART_INTERRUPT_DRIVEN=y
+#CONFIG_UART_LINE_CTRL=n
 
-#CONFIG_CONSOLE=n
+CONFIG_BOOT_BANNER=n
 
 CONFIG_LOG=y
 #CONFIG_LOG_DEFAULT_LEVEL=4
 
-CONFIG_FLASH=y
-CONFIG_FLASH_MAP=y
-CONFIG_STREAM_FLASH=y
-CONFIG_FLASH_STM32_QSPI=y
-CONFIG_ARM_MPU=n
+#CONFIG_CONSOLE=n
 
 
