--- a/sample.yaml
+++ b/sample.yaml
@@ -8,7 +8,8 @@ common:
     - qemu_cortex_m3
     - qemu_riscv32
     - qemu_riscv64    
-    - stm32f4_disco
+    - stm32h735g_disco
+    - stm32f746g_disco
     - nucleo_n657x0_q
 tests:
   sample.basic.drivers:
@@ -16,9 +17,8 @@ tests:
     filter: 
     depends_on:
     extra_configs:
-      - CONFIG_SAMPLE_LOOPBACK_MODE=y
-      - CONFIG_SAMPLE_CAN_FD_MODE=y    
     harness:
     integration_platforms:
-      - stm32f4_disco
+      - 
+      - stm32f746g_disco
       - nucleo_n657x0_q
