--- a/Kconfig
+++ b/Kconfig
@@ -1,32 +1,7 @@
-# Copyright (c) 2025
+# Copyright (c) 2026
 # SPDX-License-Identifier: Apache-2.0
 # Coskun ERGAN <coskunergan@gmail.com>
 
-mainmenu "ISO-TP Canbus Demo"
-
-config SAMPLE_LOOPBACK_MODE
-	bool "Use CAN loopback mode"
-	help
-	  Set the CAN controller to loopback mode. This allows testing without a second board.
-
-config SAMPLE_RX_THREAD_STACK_SIZE
-	int "RX threads stack size"
-	default 1024
-	help
-	  Stack size (in bytes) used for the RX threads.
-
-config SAMPLE_RX_THREAD_PRIORITY
-	int "RX threads priority"
-	default 2
-	help
-	  Priority used for the RX threads.
-
-config SAMPLE_CAN_FD_MODE
-	bool "Use CAN FD"
-	select CAN_FD_MODE
-
-config ISOTP_RX_BUF_COUNT
-	default 4 if SAMPLE_CAN_FD_MODE
-	default 2
+mainmenu "Bridge Uart"
 
 source "Kconfig.zephyr"
