--- a/prj.conf
+++ b/prj.conf
@@ -14,14 +14,16 @@ CONFIG_GPIO_ENABLE_DISABLE_INTERRUPT=y
 #Verify that userspace builds work.
 #CONFIG_USERSPACE=y
 
-#CONFIG_UART_INTERRUPT_DRIVEN=y
-#CONFIG_UART_LINE_CTRL=n
+CONFIG_UART_INTERRUPT_DRIVEN=y
+CONFIG_UART_LINE_CTRL=n
 
-CONFIG_BOOT_BANNER=n
+CONFIG_BOOT_BANNER=y
 
 CONFIG_LOG=y
 #CONFIG_LOG_DEFAULT_LEVEL=4
 
-#CONFIG_CONSOLE=n
+CONFIG_CONSOLE=y
 
+CONFIG_BOOTLOADER_MCUBOOT=y
+CONFIG_MCUBOOT_SIGNATURE_KEY_FILE="root-rsa-2048.pem"
 
