--- a/sysbuild/mcuboot.conf
+++ b/sysbuild/mcuboot.conf
@@ -1,8 +1,53 @@
-# Example of sample specific Kconfig changes when building sample with MCUboot
-# when using sysbuild. Note that the MCUboot operating mode is not set here as
-# sysbuild will automatically set it for both the application and MCUboot images itself
-CONFIG_MCUBOOT_LOG_LEVEL_WRN=y
-CONFIG_MCUBOOT_DOWNGRADE_PREVENTION=n
-# CONFIG_BOOT_SIGNATURE_TYPE_NONE=y
 
-CONFIG_BOOT_BANNER=y
+CONFIG_MCUBOOT_LOG_LEVEL_DBG=y
+CONFIG_MCUBOOT_DOWNGRADE_PREVENTION=n
+
+CONFIG_MCUBOOT_SERIAL=y
+CONFIG_BOOT_SERIAL_UART=n
+
+CONFIG_UART_CONSOLE=y
+CONFIG_CONSOLE=y
+CONFIG_LOG=y
+CONFIG_BOOT_BANNER=n
+
+CONFIG_BOOT_SERIAL_ENTRANCE_GPIO=n
+
+CONFIG_BOOT_SERIAL_CDC_ACM=y
+CONFIG_BOOT_SERIAL_WAIT_FOR_DFU=y
+CONFIG_BOOT_SERIAL_NO_APPLICATION=y
+CONFIG_BOOT_SERIAL_WAIT_FOR_DFU_TIMEOUT=3000
+CONFIG_BOOT_USB_DFU_WAIT_DELAY_MS=3000
+CONFIG_BOOT_USB_DFU_WAIT=n
+
+CONFIG_WATCHDOG=y
+CONFIG_BOOT_WATCHDOG_FEED=y
+CONFIG_BOOT_PREFER_SWAP_MOVE=y
+
+CONFIG_UPDATEABLE_IMAGE_NUMBER=2
+#CONFIG_BOOT_IMAGE_ACCESS_HOOKS=y
+CONFIG_STM32_MEMMAP=y
+CONFIG_BOOT_DIRECT_XIP=y
+CONFIG_BOOT_MAX_IMG_SECTORS_AUTO=n
+CONFIG_BOOT_MAX_IMG_SECTORS=1024
+
+# CONFIG_MAIN_STACK_SIZE=16384
+# CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
+# CONFIG_ISR_STACK_SIZE=4096
+
+# CONFIG_BOOT_SERIAL_IMG_GRP_IMAGE_STATE=y
+
+CONFIG_MCUBOOT_SERIAL_DIRECT_IMAGE_UPLOAD=y
+
+CONFIG_SPI=y
+CONFIG_FLASH=y
+CONFIG_FLASH_MAP=y
+CONFIG_FLASH_STM32_OSPI=y
+CONFIG_MULTITHREADING=y
+CONFIG_FLASH_PAGE_LAYOUT=y
+CONFIG_STREAM_FLASH=y
+CONFIG_FLASH_STM32_QSPI=y
+CONFIG_ARM_MPU=n
+
+CONFIG_BOOT_UPGRADE_ONLY=n  # Boş slot'ları yoksay
+
+CONFIG_BOOT_VALIDATE_SLOT0=n  # Primary'i validate etme = daha hızlı boot
