--- a/prj.conf
+++ b/prj.conf
@@ -27,5 +27,13 @@ CONFIG_CONSOLE=y
 CONFIG_BOOTLOADER_MCUBOOT=y
 CONFIG_MCUBOOT_SIGNATURE_KEY_FILE="root-rsa-2048.pem"
 
+CONFIG_SPI=y
+CONFIG_FLASH=y
+CONFIG_FLASH_MAP=y
+CONFIG_FLASH_STM32_OSPI=y
+CONFIG_MULTITHREADING=y
+CONFIG_FLASH_PAGE_LAYOUT=y
+CONFIG_STREAM_FLASH=y
+CONFIG_FLASH_STM32_QSPI=y
 CONFIG_ARM_MPU=n
 
