--- a/sysbuild/mcuboot.conf
+++ b/sysbuild/mcuboot.conf
@@ -51,3 +51,5 @@ CONFIG_ARM_MPU=n
 CONFIG_BOOT_UPGRADE_ONLY=n  # Boş slot'ları yoksay
 
 CONFIG_BOOT_VALIDATE_SLOT0=n  # Primary'i validate etme = daha hızlı boot
+
+CONFIG_BOOT_BOOTSTRAP=n
