--- a/sysbuild/mcuboot.conf
+++ b/sysbuild/mcuboot.conf
@@ -23,18 +23,18 @@ CONFIG_WATCHDOG=y
 CONFIG_BOOT_WATCHDOG_FEED=y
 CONFIG_BOOT_PREFER_SWAP_MOVE=y
 
-CONFIG_UPDATEABLE_IMAGE_NUMBER=2
-#CONFIG_BOOT_IMAGE_ACCESS_HOOKS=y
-CONFIG_STM32_MEMMAP=y
-CONFIG_BOOT_DIRECT_XIP=y
-CONFIG_BOOT_MAX_IMG_SECTORS_AUTO=n
-CONFIG_BOOT_MAX_IMG_SECTORS=1024
+CONFIG_UPDATEABLE_IMAGE_NUMBER=1
+#CONFIG_STM32_MEMMAP=y
+#CONFIG_BOOT_DIRECT_XIP=y
+# CONFIG_BOOT_MAX_IMG_SECTORS_AUTO=n
+# CONFIG_BOOT_MAX_IMG_SECTORS=4096
 
 # CONFIG_MAIN_STACK_SIZE=16384
 # CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 # CONFIG_ISR_STACK_SIZE=4096
 
 # CONFIG_BOOT_SERIAL_IMG_GRP_IMAGE_STATE=y
+# CONFIG_BOOT_SERIAL_IMG_GRP_SLOT_INFO=y
 
 CONFIG_MCUBOOT_SERIAL_DIRECT_IMAGE_UPLOAD=y
 
@@ -50,6 +50,13 @@ CONFIG_ARM_MPU=n
 
 CONFIG_BOOT_UPGRADE_ONLY=n  # Boş slot'ları yoksay
 
-CONFIG_BOOT_VALIDATE_SLOT0=n  # Primary'i validate etme = daha hızlı boot
+CONFIG_BOOT_VALIDATE_SLOT0=y
 
-CONFIG_BOOT_BOOTSTRAP=n
+CONFIG_BOOT_BOOTSTRAP=y
+
+CONFIG_COMPILER_OPT="-Wno-deprecated-declarations"
+# CONFIG_MCUBOOT_BOOT_MAX_ALIGN=32
+# CONFIG_BOOT_ERASE_PROGRESSIVELY=y
+# CONFIG_BOOT_DIRECT_XIP_REVERT=n
+# CONFIG_BOOT_SWAP_USING_SCRATCH=n
+
