--- a/prj.conf
+++ b/prj.conf
@@ -37,3 +37,6 @@ CONFIG_STREAM_FLASH=y
 CONFIG_FLASH_STM32_QSPI=y
 CONFIG_ARM_MPU=n
 
+CONFIG_XIP=y
+CONFIG_STM32_MEMMAP=y
+CONFIG_SYS_CLOCK_HW_CYCLES_PER_SEC=64000000
