--- a/sysbuild/mcuboot.conf
+++ b/sysbuild/mcuboot.conf
@@ -24,10 +24,10 @@ CONFIG_BOOT_WATCHDOG_FEED=y
 CONFIG_BOOT_PREFER_SWAP_MOVE=y
 
 CONFIG_UPDATEABLE_IMAGE_NUMBER=1
-#CONFIG_STM32_MEMMAP=y
-#CONFIG_BOOT_DIRECT_XIP=y
-# CONFIG_BOOT_MAX_IMG_SECTORS_AUTO=n
-# CONFIG_BOOT_MAX_IMG_SECTORS=4096
+CONFIG_STM32_MEMMAP=y
+CONFIG_BOOT_DIRECT_XIP=y
+CONFIG_BOOT_MAX_IMG_SECTORS_AUTO=n
+CONFIG_BOOT_MAX_IMG_SECTORS=4096
 
 # CONFIG_MAIN_STACK_SIZE=16384
 # CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
@@ -42,7 +42,7 @@ CONFIG_SPI=y
 CONFIG_FLASH=y
 CONFIG_FLASH_MAP=y
 CONFIG_FLASH_STM32_OSPI=y
-CONFIG_MULTITHREADING=y
+# CONFIG_MULTITHREADING=y
 CONFIG_FLASH_PAGE_LAYOUT=y
 CONFIG_STREAM_FLASH=y
 CONFIG_FLASH_STM32_QSPI=y
@@ -60,3 +60,4 @@ CONFIG_COMPILER_OPT="-Wno-deprecated-declarations"
 # CONFIG_BOOT_DIRECT_XIP_REVERT=n
 # CONFIG_BOOT_SWAP_USING_SCRATCH=n
 
+CONFIG_SYS_CLOCK_HW_CYCLES_PER_SEC=64000000
