--- a/sysbuild/mcuboot.conf
+++ b/sysbuild/mcuboot.conf
@@ -33,8 +33,8 @@ CONFIG_BOOT_MAX_IMG_SECTORS=4096
 # CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 # CONFIG_ISR_STACK_SIZE=4096
 
-# CONFIG_BOOT_SERIAL_IMG_GRP_IMAGE_STATE=y
-# CONFIG_BOOT_SERIAL_IMG_GRP_SLOT_INFO=y
+CONFIG_BOOT_SERIAL_IMG_GRP_IMAGE_STATE=y
+CONFIG_BOOT_SERIAL_IMG_GRP_SLOT_INFO=y
 
 CONFIG_MCUBOOT_SERIAL_DIRECT_IMAGE_UPLOAD=y
 
