--- a/sysbuild/mcuboot.conf
+++ b/sysbuild/mcuboot.conf
@@ -61,3 +61,29 @@ CONFIG_COMPILER_OPT="-Wno-deprecated-declarations"
 # CONFIG_BOOT_SWAP_USING_SCRATCH=n
 
 CONFIG_SYS_CLOCK_HW_CYCLES_PER_SEC=64000000
+
+# mbedTLS'i aktif et
+CONFIG_MBEDTLS=y
+CONFIG_MBEDTLS_BUILTIN=y
+
+CONFIG_MBEDTLS_RSA_C=y
+CONFIG_BOOT_SIGNATURE_TYPE_ECDSA_P256=y
+CONFIG_MBEDTLS_ECP_C=y
+CONFIG_MBEDTLS_ECDSA_C=y
+CONFIG_MBEDTLS_ECP_DP_SECP256R1_ENABLED=y
+CONFIG_MBEDTLS_CIPHER_AES_ENABLED=y
+CONFIG_MBEDTLS_CTR_DRBG_C=y
+CONFIG_MBEDTLS_ENTROPY_C=y
+
+CONFIG_MBEDTLS_HMAC_DRBG_C=n
+CONFIG_ENTROPY_GENERATOR=y
+CONFIG_TEST_RANDOM_GENERATOR=y
+
+CONFIG_BOOT_FIH_PROFILE_OFF=y
+CONFIG_MBEDTLS_SHA256=y
+CONFIG_MBEDTLS_CIPHER=y
+CONFIG_MBEDTLS_MD=y
+
+CONFIG_ENTROPY_STM32_RNG=y
+
+CONFIG_MCUBOOT_ACTION_HOOKS=y
